# FreeRocket

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FreeRtos_project.ioc  README.md  Report.md  SKYRTOS_CHAT_HANDOFF.md  STM32F446RETx_FLASH.ld  SUT.md  bmi088.c  bmi088.h  bsp.c  bsp.h  gdb_user_manuel.md  graduation_presentation_and_poster_guide.md  i2c1.c  i2c1.h  main.c  miros.c  mlmodel.md  slayt_iskelet.md  system_stm32f4xx.c
.claude/: settings.local.json
.github/agents/: report-writer.agent.md
Core/Inc/: FreeRTOSConfig.h  alt_kalman.h  alt_snapshot.h  app.h  baro_snapshot.h  baro_task.h  bme280.h  bmi088.h  bmi088_defs.h  cmd_task.h  flight_sm.h  gnss_snapshot.h  gnss_task.h  imu_snapshot.h  imu_task.h  iwdg.h  mahony.h  phase_ml.h  sut_task.h  (+4 more)
Cube/: .mxproject  CMakeLists.txt  mirtos.ioc
FreeRtos_project/: .mxproject  FreeRtos_project.ioc
IZU_Presentation/: 01_giris.tex  02_mimari.tex  03_algoritma.tex  04_test.tex  05_sonuc.tex  intro.tex  main.tex  thanks.tex
Report Latex/: bolum1.tex  bolum2.tex  bolum3.tex  bolum4.tex  bolum5.tex  ek.tex  gantt.tex  izumdbf.cls  ozet.tex  rapor.lof  rapor.lot  rapor.tex  referanslar.bib  tanimlar.tex
SIT_SUT/: imu_single.csv  scenario_01_az_altitude_gurultu.csv  scenario_02_cok_altitude_gurultu.csv  scenario_03_az_alt_az_ivme_gurultu.csv  scenario_04_cok_alt_az_ivme_gurultu.csv  scenario_05_cok_alt_cok_ivme_gurultu.csv  scenario_06_az_alt_az_ivme_altitude_ziplar.csv  scenario_07_az_alt_az_ivme_nadir_anomali.csv
logs/: SIT_log_20260517_154957.csv
temp/: systemview_dump.svdat  systemview_dump1.svdat  systemview_dump2.svdat
tools/: app.py
(+94 files in other folders)
